--- a/book-network-ui/src/app/pages/login/login.component.html
+++ b/book-network-ui/src/app/pages/login/login.component.html
@@ -2,15 +2,15 @@
     <h3 class="text-center">Login</h3>
     <hr>
     <div class="alert alert-danger" role="alert" *ngIf="errorMsg.length">
-        <p *ngFor="let msg of errMsg">{{ msg }}</p>
+        <p *ngFor="let msg of errorMsg">{{ msg }}</p>
     </div>
     <div class="mb-3">
         <label for="login" class="form-label">Email address</label>
-        <input [(ngModel)]="authRequest.email"  type="email" class="form-control" id="login" placeholder="name@example.com"/>
+        <input [(ngModel)]="authRequest.email"  type="email" class="form-control" id="login" placeholder="name@example.com" required />
 
         <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-            <input [(ngModel)]="authRequest.password" type="password" class="form-control" id="password" placeholder="Password"/>
+            <input [(ngModel)]="authRequest.password" type="password" class="form-control" id="password" placeholder="Password" required />
         </div>
         <div class="d-flex justify-content-between mb-3">
             <button (click)="login()" type="button" class="btn btn-primary">
