completed frontend / backend

--- a/book-network-ui/src/app/modules/book/pages/book-list/book-list.component.html
+++ b/book-network-ui/src/app/modules/book/pages/book-list/book-list.component.html
@@ -1,7 +1,7 @@
 <h3>Books List</h3>
 <div *ngIf="message" class="alert"
-     [class.alert-success="level === 'success'"
-     [class.alert-danger="level === 'error'"
+     [class.alert-success]="level === 'success'"
+     [class.alert-danger]="level === 'error'"
 >
   {{ message }}
 </div>
