--- a/book-network-ui/src/app/modules/book/components/menu/menu.component.html
+++ b/book-network-ui/src/app/modules/book/components/menu/menu.component.html
@@ -16,22 +16,22 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link" aria-current="page" routerLink="/my-books">
+            <a href="" class="nav-link" aria-current="page" routerLink="/books/my-books">
               <i class="fas fa-book"></i>&nbsp;My books
             </a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link" aria-current="page" routerLink="/my-waiting-list">
+            <a href="" class="nav-link" aria-current="page" routerLink="/books/my-waiting-list">
               <i class="fas fa-heart"></i>&nbsp;My waiting list
             </a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link" aria-current="page" routerLink="/my-returned-books">
+            <a href="" class="nav-link" aria-current="page" routerLink="/books/my-returned-books">
               <i class="fas fa-home-alt"></i>&nbsp;My returned books
             </a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link" aria-current="page" routerLink="/my-borrowed-books">
+            <a href="" class="nav-link" aria-current="page" routerLink="/books/my-borrowed-books">
               <i class="fas fa-home-alt"></i>&nbsp;Borrowed books
             </a>
           </li>
